--- a/src/app/tax-calculator/tax-calculator/tax-calculator.component.html
+++ b/src/app/tax-calculator/tax-calculator/tax-calculator.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <!-- <div *ngIf="!taxChildRoutes.includes(this.currentRoute)">
+  <div *ngIf="!taxChildRoutes.includes(this.currentRoute)">
     <h2>Do You Want Calculate Your Annual Taxes?</h2>
     <div>
       <a [routerLink]="['/tax-calculator/basicDetails']">Click Here</a>
@@ -9,5 +9,5 @@
     <form [formGroup]="taxForm">
       <app-page-switcher [taxChildRoutes]="taxChildRoutes" [form]="taxForm"></app-page-switcher>
     </form>
-  </div> -->
+  </div>
 </div>
